feat: change velocity increment from int to float for better precision + working play button

--- a/model.html
+++ b/model.html
@@ -37,7 +37,7 @@
     </div>
     
     <div id="menu">
-        <input type="button" value="Jogar">
+        <input onclick="startGame()" type="button" value="Jogar">
         <input type="button" value="Recordes">
         <input type="button" value="Como jogar">
     </div>
