style: improve layout with centered screen and background

--- a/model.html
+++ b/model.html
@@ -8,19 +8,14 @@
 </head>
 
 <body>
-    <div id="screen"> 
+    <div id="container"> 
         <div id="telemetry-panel">
-            <div id="telemetry-screen" >
-                <p id="telemetry-text-speed">Speed: null</p>
-                <p id="telemetry-text-fuel">Fuel: 0%</p>
-            </div>
-
-            <div id="status-screen">
-                <p id="game-status">Status: paused</p>
-            </div>
-
+            <div id="speed-panel"></div>
+            <div id="fuel-panel"></div>
+            <div id="status-panel"></div>
         </div>
-        <div id="game">
+
+        <div id="game-screen">
             <div id="terrain"></div>
             
             <div id="character"></div>
