feat: add menu screen

--- a/model.html
+++ b/model.html
@@ -21,14 +21,13 @@
             
             <div id="character"></div>
             
-            <div id="menu"> <!--
+            <div id="menu">
                 <div id="title">Lunar Lander</div>
                 <div id="buttons"> 
-                    <button>Jogar</button>
+                    <button onclick="startGame()">Jogar</button>
                     <button>Como jogar</button>
                     <button>Recordes</button>
                 </div>
-                 -->
             </div>
         </div>
     </div>
