--- a/model.html
+++ b/model.html
@@ -13,6 +13,7 @@
             <div id="speed-panel">Speed: null</div>
             <div id="fuel-panel">Fuel 100%</div>
             <div id="status-panel">Status: Paused</div>
+            <div id="level-panel">Level: 0</div>
         </div>
 
         <div id="game-screen">
