feat: add game over message + return to menu logic

--- a/model.html
+++ b/model.html
@@ -30,6 +30,11 @@
                     <button>Recordes</button>
                 </div>
             </div>
+            
+            <div id="game-over-menu">
+                <div id="game-over-message">Game Over</div>
+            </div>
+
         </div>
     </div>
 
