feat: add how to play pop up

--- a/model.html
+++ b/model.html
@@ -26,7 +26,7 @@
                 <div id="title">Lunar Lander</div>
                 <div id="buttons"> 
                     <button onclick="startGame()">Jogar</button>
-                    <button>Como jogar</button>
+                    <button onclick="showHowToPlay(true)">Como jogar</button>
                     <button>Recordes</button>
                 </div>
             </div>
@@ -34,7 +34,21 @@
             <div id="game-over-menu">
                 <div id="game-over-message">Game Over</div>
             </div>
-
+            
+            <div id="container-how-to-play">
+                <div id="how-to-play-menu">
+                    <div id="how-to-title">How to play?</div>
+                    <div id="game-context">
+                        You're the lunar module pilot and your job is to land on the green landing zones. But be aware about your fuel level and speed (Need to be < 1.5)
+                    </div>
+                    <div id="controls">
+                        <p style="margin:0px" id="controls-title">Controls:</p>
+                        <p style="margin:0px; padding: 5px">Up: Fire the engine</p>
+                        <p style="margin:0px; padding: 5px">Left and Right: Control the spacecraft</p>
+                    </div>
+                </div>
+                <button style="padding: 10px; margin: 10px;" onclick="showHowToPlay(false)">Return to menu</button>
+            </div>
         </div>
     </div>
 
