--- a/model.html
+++ b/model.html
@@ -14,6 +14,7 @@
             <div id="fuel-panel">Fuel 100%</div>
             <div id="status-panel">Status: Paused</div>
             <div id="level-panel">Level: 0</div>
+            <div id="score-panel">Score: 0000</div>
         </div>
 
         <div id="game-screen">
