--- a/model.html
+++ b/model.html
@@ -26,8 +26,8 @@
             <div id="menu">
                 <div id="title">Lunar Lander</div>
                 <div id="buttons"> 
-                    <button onclick="startGame()">Jogar</button>
-                    <button onclick="showHowToPlay(true)">Como jogar</button>
+                    <button onclick="startGame()" style="padding: 20px; font-family: Good Old; font-size: 20px;">Jogar</button>
+                    <button onclick="showHowToPlay(true)" style="padding: 20px; font-family: Good Old; font-size: 20px;">Como jogar</button>
                 </div>
             </div>
             
@@ -43,11 +43,11 @@
                     </div>
                     <div id="controls">
                         <p style="margin:0px" id="controls-title">Controls:</p>
-                        <p style="margin:0px; padding: 5px">Up: Fire the engine</p>
-                        <p style="margin:0px; padding: 5px">Left and Right: Control the spacecraft</p>
+                        <p style="margin:0px; padding-left: 10px; padding-right: 10px;">Up: Fire the engine</p>
+                        <p style="margin:0px; padding-left: 10px; padding-right: 10px; padding-bottom: 5px;">Left and Right: Control the spacecraft</p>
                     </div>
                 </div>
-                <button style="padding: 10px; margin: 10px;" onclick="showHowToPlay(false)">Return to menu</button>
+                <button onclick="showHowToPlay(false)" style="padding: 20px; font-family: Good Old; font-size: 15px;">Return to menu</button>
             </div>
         </div>
     </div>
