style: change play and how to play buttons to English

--- a/model.html
+++ b/model.html
@@ -26,13 +26,17 @@
             <div id="menu">
                 <div id="title">Lunar Lander</div>
                 <div id="buttons"> 
-                    <button onclick="startGame()" style="padding: 20px; font-family: Good Old; font-size: 20px;">Jogar</button>
-                    <button onclick="showHowToPlay(true)" style="padding: 20px; font-family: Good Old; font-size: 20px;">Como jogar</button>
+                    <button onclick="startGame()" style="padding: 20px; font-family: Good Old; font-size: 20px;">Play</button>
+                    <button onclick="showHowToPlay(true)" style="padding: 20px; font-family: Good Old; font-size: 20px;">How to play?</button>
                 </div>
             </div>
             
             <div id="game-over-menu">
                 <div id="game-over-message">Game Over</div>
+            </div>
+
+            <div id="out-of-fuel-message">
+                Out of Fuel
             </div>
             
             <div id="container-how-to-play">
@@ -42,7 +46,7 @@
                         You're the lunar module pilot and your job is to land on the green landing zones. But be aware about your fuel level and speed (Need to be < 1.5)
                     </div>
                     <div id="controls">
-                        <p style="margin:0px" id="controls-title">Controls:</p>
+                        <p style="margin:0px" id="controls-title">Controls</p>
                         <p style="margin:0px; padding-left: 10px; padding-right: 10px;">Up: Fire the engine</p>
                         <p style="margin:0px; padding-left: 10px; padding-right: 10px; padding-bottom: 5px;">Left and Right: Control the spacecraft</p>
                     </div>
